# OOP_dijkstra_visualisator

./: .gitignore  CMakeLists.txt  USER.md  test_dijkstra.cpp  test_spec.cpp
docs/: README.md  architecture.md  Визуализатор алгоритма Дейкстры- как я сделала интерактивный учебный инструмент .docx
src/: DijkstraSolver.cpp  DijkstraSolver.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphCanvas.cpp  GraphCanvas.h  MainWindow.cpp  MainWindow.h  Vertex.cpp  Vertex.h  main.cpp
